Fix lists overflow
Fixes #662

--- a/src/less/ios/lists.less
+++ b/src/less/ios/lists.less
@@ -93,12 +93,14 @@
         .flexbox();
         -webkit-box-flex:1;
         -ms-flex:1;
+        overflow: hidden;
         .justify-content(space-between);
         .align-items(center);
         .align-self(stretch);
     }
     .item-title {
         .flex-shrink(1);
+        min-width: 0;
         white-space: nowrap;
         position: relative;
         overflow: hidden;
